lucas casi completo